--- a/game.html
+++ b/game.html
@@ -14,6 +14,11 @@
         <img src="assets/icons8-heart-32.png" alt="">
         <img src="assets/icons8-heart-32.png" alt="">
     </div>
-    
+    <div id="gameboard">
+        <div id="spaceship"><img src="assets/spaceship.png" alt="" width="50px"></div>
+        <div id="bullet"></div>
+        <div id="enemy"></div>
+      </div>
 </body>
+<script src="game.js"></script>
 </html>
