--- a/game.html
+++ b/game.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div id="timer" class="flex-centered">3</div>
+    <div id="timer" class="flex-centered"> </div>
     <div id="lives" class="flex-centered">
-        <img src="assets/icons8-heart-32.png" alt="">
-        <img src="assets/icons8-heart-32.png" alt="">
-        <img src="assets/icons8-heart-32.png" alt="">
+        <img src="./assets/gem-4.png" id = "heart-1" alt="">
+        <img src="./assets/gem-4.png" id ="heart-2" alt="">
+        <img src="./assets/gem-4.png" id = "heart-3" alt="">
+        <img src="./assets/gem-4.png" id = "heart-4" alt="">
+        <img src="./assets/gem-4.png" id = "heart-5" alt="">
     </div>
     <div id="gameboard">
-        <div id="spaceship"><img src="assets/spaceship.png" alt="" width="50px"></div>
         <div id="bullet"></div>
-        <div id="enemy"></div>
       </div>
+      <div id="spaceship"><img src="assets/spaceship.png" alt="" width="100px"></div>
+
 </body>
 <script src="game.js"></script>
 </html>
