--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <br>
         The game continues until the player collides with an asteroid.
         <br>
+        <br>
+        <br>
+        Made with 🖤 by Melvin
+        <br>
     </div>
     <div id="box-close">X</div>
 </div>
