--- a/gameover.html
+++ b/gameover.html
@@ -8,7 +8,7 @@
 </head>
 <body class="flex_centre">
     <div class="title">GAME OVER</div>
-    <div class="score">SCORE: <span>7</span></div>
+    <div class="score">SCORE: <span></span></div>
     <br>
     <br>
     <br>
@@ -17,15 +17,5 @@
     <button id="Home">Home</button>
     
 </body>
-<script>
-    const playagain = document.getElementById("play-again")
-    const home = document.getElementById('Home')
-    playagain.addEventListener('click', ()=>{
-        location.href = "game.html"
-    })
-    home.addEventListener('click', ()=>{
-        location.href='index.html'
-    })
-    
-</script>
+<script src="gameover.js"></script>ipt
 </html>
