--- a/gameover.html
+++ b/gameover.html
@@ -17,5 +17,5 @@
     <button id="Home">Home</button>
     
 </body>
-<script src="gameover.js"></script>ipt
+<script src="gameover.js"></script>
 </html>
