--- a/gameover.html
+++ b/gameover.html
@@ -8,11 +8,11 @@
 </head>
 <body class="flex_centre">
     <div class="title">GAME OVER</div>
-    <div class="score">SCORE: <span></span></div>
+    <div class="score">SCORE: <span id="scores"></span></div>
     <br>
     <br>
     <br>
-    <div class="lists message">There's a lot left to EXPLORE</div>
+    <div class="lists message"> Space is vast <span id = 'name'></span>, there's a lot left to EXPLORE</div>
     <button id="play-again">Play Again</button>
     <button id="Home">Home</button>
     
