--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
     <div id="gameboard">
         <div id="bullet"></div>
       </div>
-      <div id="spaceship"><img src="assets/spaceship.png" alt="" width="100px"></div>
+      <div ><img id="spaceship" src="assets/spaceship.png" alt=""></div>
 
 </body>
 <script src="game.js"></script>
