--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Explorers</title>
+    <link rel="shortcut icon" href="./assets/planet.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="flex_centre">
 
-    <h6 class="title">SPACE <br> EXPLORERS<h6>
+    <h6 class="title">SPACE<br>EXPLORERS<h6>
     <div><button id="play" class="play-button">PLAY</button></div>
     <div><button class="instructions-button">Instructions</button></div>
 
@@ -19,22 +20,22 @@
         Space explorer is a simple and fun game for 1 players.
         <br>
         <br>
-        Players control a spaceship with arrow keys or touch controls.
+        Players control a spaceship with arrow keys or touch controls on touchscreen.
         <br>
         <br>
         The spaceship moves upward automatically.
         <br>
         <br>
-        Players can control the spaceship's left and right movement by tilting their device or using arrow keys on a laptop.
+        Control the spaceship using up, down, left, right keys.
         <br>
         <br>
         Space gems appear randomly on the screen, and players must collect them to increase their score.
         <br>
         <br>
-        Asteroids also appear randomly and move from right to left. 
+        Asteroids also appear randomly which have to be avoided
         <br>
         <br>
-        The game continues until the player collides with an asteroid.
+        The game continues until the player has collided with 5 asteroid.
         <br>
         <br>
         <br>
