--- a/details.html
+++ b/details.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Explorer</title>
+    <link rel="shortcut icon" href="./assets/planet.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="flex_centre">
