--- a/gameover.html
+++ b/gameover.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Explorers</title>
+    <link rel="shortcut icon" href="./assets/planet.png" type="image/x-icon">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="flex_centre">
-    <div class="title">GAME OVER</div>
+    <div class="title over">GAME OVER</div>
     <div class="score">SCORE: <span id="scores"></span></div>
     <br>
     <br>
     <br>
-    <div class="lists message"> Space is vast <span id = 'name'></span>, there's a lot left to EXPLORE</div>
+    <div class="lists message">Space is vast<span id = 'name'> </span><br>There's a lot left to EXPLORE</div>
     <button id="play-again">Play Again</button>
     <button id="Home">Home</button>
     
