--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="timer" class="flex-centered"> </div>
+    <div id="score" class="flex-centered"> </div>
     <div id="lives" class="flex-centered">
         <img src="./assets/gem-4.png" id = "heart-1" alt="">
         <img src="./assets/gem-4.png" id ="heart-2" alt="">
@@ -19,7 +19,6 @@
     <div id="gameboard">
         <div id="bullet"></div>
         <div ><img id="spaceship" src="assets/spaceship.png" alt=""></div>
-
       </div>
 
 </body>
