--- a/gameover.html
+++ b/gameover.html
@@ -10,7 +10,9 @@
 </head>
 <body class="flex_centre">
     <div class="title over">GAME OVER</div>
+    <div id="highScore">HIGH SCORE: <span id="PlayerHighScore"></span></div>
     <div class="score">SCORE: <span id="scores"></span></div>
+
     <br>
     <br>
     <br>
