--- a/gameover.html
+++ b/gameover.html
@@ -16,7 +16,7 @@
     <br>
     <br>
     <br>
-    <div class="lists message">Space is vast <span id = 'name'> </span>,<br>There's a lot left to EXPLORE</div>
+    <div class="lists message" id = 'mess'></div>
     <button id="play-again">Play Again</button>
     <button id="Home">Home</button>
     
