--- a/gameover.html
+++ b/gameover.html
@@ -16,7 +16,7 @@
     <br>
     <br>
     <br>
-    <div class="lists message" id = 'mess'></div> //Where the random message is displvyed
+    <div class="lists message" id = 'mess'></div>
     <button id="play-again">Play Again</button>
     <button id="Home">Home</button>
     
